handle the error message from background.js

--- a/popup.html
+++ b/popup.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>!!!Tabnabbing Detector is running!!!</title>
-    <link rel="stylesheet" type="text/css" href="popup.css">
-</head>
-<body>
-    <div id="popupContainer" class="popup">
-    <img src="images/icon.png" alt="Tabnabbing Detector Icon" class="icon">
-    <p>you are able to detect the change of content in websites after switching the tab</p>
-    </div>  
-</body>
-</html>
+<link rel="stylesheet" type="text/css" href="popup.css">
+
+
+<div class="popup">
+    <p id = "name">!!!Tabnabbing Detector is running!!!</p>
+    <p>you are able to detect the change of content in websites after switching the tab </p>
+  </div>
+<!-- <div id="popupContainer" class="popup">
+<div>!!!Tabnabbing Detector is running!!!</div>
+<img src="images/icon.png" alt="Tabnabbing Detector Icon" class="icon">
+<p>you are able to detect the change of content in websites after switching the tab</p>
+</div>  
+</html> -->
 
