update the icon warning

--- a/popup.html
+++ b/popup.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html>
-<link rel="stylesheet" type="text/css" href="popup.css">
-
-
-<div class="popup">
-    <p id = "name">!!!Tabnabbing Detector is running!!!</p>
-    <p>you are able to detect the change of content in websites after switching the tab </p>
-  </div>
-<!-- <div id="popupContainer" class="popup">
-<div>!!!Tabnabbing Detector is running!!!</div>
-<img src="images/icon.png" alt="Tabnabbing Detector Icon" class="icon">
-<p>you are able to detect the change of content in websites after switching the tab</p>
-</div>  
-</html> -->
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="popup.css">
+    <title>Tabnabbing Detector</title>
+</head>
+<body>
+    <div class="popup">
+        <img src="images/icon.png" alt="Tabnabbing Detector Icon" class="icon">
+        <p id="name">!!!Tabnabbing Detector is running!!!</p>
+        <p>You are able to detect the change of content in websites after switching the tab.</p>
+    </div>
+</body>
+</html>
